# superenalotto_dataset_package_v2

./: .gitignore  .mcp.json  .opencode.json  CLAUDE.md  README.md  download_superenalotto_dataset.py  requirements-analysis.txt
.claude/: settings.local.json
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_log.txt  vcpkg.json
cpp/include/backtesting/: walk_forward.hpp
cpp/include/core/: data_loader.hpp  monte_carlo.hpp  prng.hpp  stats.hpp  types.hpp
cpp/include/generation/: combination_generator.hpp  mmr_selector.hpp
cpp/include/inference/: mcmc_engine.hpp  model_selection.hpp  posterior_predictive.hpp
cpp/include/models/: dirichlet_mcmc.hpp  hawkes.hpp  hmm_regime.hpp  prng_fingerprint.hpp  wallenius.hpp
cpp/python/: CMakeLists.txt  bindings.cpp
cpp/scripts/: build.ps1  build.sh  demo_from_python.py  install_cuda_toolkit.ps1  install_python_module.ps1
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/backtesting/: walk_forward.cpp
cpp/src/core/: data_loader.cpp  monte_carlo.cpp  monte_carlo_cuda.cu  prng.cpp  stats.cpp
cpp/src/generation/: combination_generator.cpp  mmr_selector.cpp
cpp/src/inference/: mcmc_engine.cpp  model_selection.cpp  posterior_predictive.cpp
cpp/src/models/: dirichlet_mcmc.cpp  hawkes.cpp  hmm_regime.cpp  prng_fingerprint.cpp  wallenius.cpp
cpp/tests/: CMakeLists.txt  test_backtesting.cpp  test_data_loader.cpp  test_generation.cpp  test_model_selection.cpp  test_monte_carlo.cpp  test_prng.cpp  test_stats.cpp
data/: superenalotto_2009-2026_extraction.csv  superenalotto_2025_2026.csv  superenalotto_2025_2026_schema.csv  superenalotto_5.5_anni_extraction.csv  superenalotto_full_history_validated.csv
docs/: official_mechanism.md
inference/: analysis_summary.json  analysis_summary_55.json  combinazioni_ranking.csv  combinazioni_ranking_55.csv  phaseB_comparison_old_vs_extended.csv  phaseB_ext_model_selection.csv  phaseB_ext_permutation_test.csv  phaseB_ext_ppc.json  phaseB_ext_summary.json  phaseB_model_selection.csv  phaseB_permutation_test.csv  phaseB_ppc.json  phaseB_summary.json  phaseC_combinations.csv  phaseC_summary.json  phaseD_validation_report.json  se_engine.cp311-win_amd64.pyd
utils.py/: analysis.py  analysis_55.py  analysis_rigorous.py  generate_100_via_cpp.py  generator_hierarchy.py  phaseB_extended.py  phaseC_combinations.py  phaseD_validator.py  wallenius_urn.py
